# algorithmicLearnning

./: README.md
learnOpenMesh/: CMakeLists.txt
learnOpenMesh/openMeshLibrary/lib/: OpenMeshTools.lib
